--- a/main.scss
+++ b/main.scss
@@ -437,6 +437,40 @@ section {
     }
     h2{
         font-weight: 300;
+        margin: 0;
+    }
+    .blocks{
+        display: flex;
+        align-items: flex-start;
+        flex-wrap: wrap;
+        margin-top: -60px;
+        .block{
+            flex: 1 1 33.33333%;
+            max-width: 33.33333%;
+            margin-top: 60px;
+            img{
+                width: 35px;
+                margin-bottom: 15px;
+            }
+            h3{
+                font-size: 13px;
+                font-weight: 400;
+                margin: 0;
+                margin-bottom: 5px;
+                span{
+                    font-size: 24px;
+                    padding: 5px;
+                    padding-bottom: 0;
+                }
+            }
+            p{
+                margin: 0;
+                color: #999;
+                font-size: 13px;
+                line-height: 1.6;
+                font-weight: 300;
+            }
+        }
     }
 }
 .screen-2 {
