--- a/main.scss
+++ b/main.scss
@@ -462,7 +462,8 @@ section {
                 width: 65px;
                 margin-bottom: 15px;
                 height: auto;
-                fill: $main-red;
+                // fill: $main-red;
+                fill: #40a6ffa8;
             }
             h3 {
                 font-size: 13px;
@@ -526,5 +527,29 @@ footer {
         font-weight: 300;
         font-size: 14px;
         color: #219bff;
+    }
+}
+
+.cancel-svg{
+    svg{
+        transform: scale(0.7);
+        margin-left: 2px;
+    }
+    position: relative;
+    &:before{
+        content: "";
+        position: absolute;
+        width: 65px;
+        height: 65px;
+        border-radius: 100%;
+        border: 2px solid #40a6ffa8;
+    }
+    &:after{
+        content: "";
+        position: absolute;
+        height: 65px;
+        border: 1px solid #40a6ffa8;
+        left: 0;
+        transform: translate3d(34px, 0px, 0px) rotate(45deg);
     }
 }
