--- a/main.scss
+++ b/main.scss
@@ -1,3 +1,97 @@
+$main-red: #ff494e;
+.hamburger {
+    padding: 8px;
+    display: inline-block;
+    cursor: pointer;
+    -webkit-transition-property: opacity, -webkit-filter;
+    transition-property: opacity, -webkit-filter;
+    transition-property: opacity, filter;
+    transition-property: opacity, filter, -webkit-filter;
+    -webkit-transition-duration: 0.15s;
+    transition-duration: 0.15s;
+    -webkit-transition-timing-function: linear;
+    transition-timing-function: linear;
+    font: inherit;
+    color: inherit;
+    text-transform: none;
+    background-color: transparent;
+    border: 0;
+    margin: 0;
+    overflow: visible;
+}
+
+.hamburger:hover {
+    opacity: 0.7;
+}
+
+.hamburger-box {
+    width: 40px;
+    height: 21px;
+    display: inline-block;
+    position: relative;
+}
+
+.hamburger-inner {
+    display: block;
+    top: 50%;
+    margin-top: -1.5px;
+}
+
+.hamburger-inner,
+.hamburger-inner:after,
+.hamburger-inner:before {
+    width: 35px;
+    height: 2px;
+    background-color: $main-red;
+    border-radius: 4px;
+    position: absolute;
+    -webkit-transition-property: -webkit-transform;
+    transition-property: -webkit-transform;
+    transition-property: transform;
+    transition-property: transform, -webkit-transform;
+    -webkit-transition-duration: 0.15s;
+    transition-duration: 0.15s;
+    -webkit-transition-timing-function: ease;
+    transition-timing-function: ease;
+}
+
+.hamburger-inner:after,
+.hamburger-inner:before {
+    content: "";
+    display: block;
+}
+
+.hamburger-inner:before {
+    top: -9px;
+}
+
+.hamburger-inner:after {
+    bottom: -9px;
+}
+.hamburger--minus .hamburger-inner:after,
+.hamburger--minus .hamburger-inner:before {
+    -webkit-transition: bottom 0.08s ease-out 0s, top 0.08s ease-out 0s,
+        opacity 0s linear;
+    transition: bottom 0.08s ease-out 0s, top 0.08s ease-out 0s,
+        opacity 0s linear;
+}
+
+.hamburger--minus.is-active .hamburger-inner:after,
+.hamburger--minus.is-active .hamburger-inner:before {
+    opacity: 0;
+    -webkit-transition: bottom 0.08s ease-out, top 0.08s ease-out,
+        opacity 0s linear 0.08s;
+    transition: bottom 0.08s ease-out, top 0.08s ease-out,
+        opacity 0s linear 0.08s;
+}
+
+.hamburger--minus.is-active .hamburger-inner:before {
+    top: 0;
+}
+
+.hamburger--minus.is-active .hamburger-inner:after {
+    bottom: 0;
+}
 html {
     line-height: 1.15;
     -webkit-text-size-adjust: 100%;
@@ -254,7 +348,7 @@ template {
     font-weight: 900;
     font-style: italic;
 }
-$main-red: #ff494e;
+
 body {
     font-family: Roboto, Helvetica Neue, Arial, Helvetica, sans-serif;
     font-weight: 300;
@@ -306,6 +400,9 @@ header {
             display: flex;
             justify-content: space-between;
             align-items: center;
+            .hamburger {
+                display: none;
+            }
             a {
                 display: flex;
                 align-items: center;
@@ -327,15 +424,53 @@ header {
     }
     &.slim {
         padding: 10px 0;
-        box-shadow: 0 0 10px 1px rgba(0,0,0,0.1);
-        .logo{
+        box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.1);
+        .logo {
             max-width: 150px !important;
+        }
+    }
+    @media screen and (max-width: 800px) {
+        .content {
+            flex-wrap: wrap;
+            .right {
+                min-width: 100%;
+                flex: 1;
+                order: 1;
+                .phone-wrap {
+                    flex: 1;
+                    .hamburger {
+                        display: block;
+                    }
+                    .logo {
+                        max-width: 130px;
+                    }
+                }
+            }
+            .link {
+                min-width: 100%;
+                flex: 1;
+                order: 2;
+                display: none;
+                nav {
+                    flex-wrap: wrap;
+                    a {
+                        margin: 0;
+                        display: block;
+                        flex: 1;
+                        padding: 10px;
+                        text-align: center;
+                    }
+                }
+            }
         }
     }
 }
 section {
     // min-height: 100vh;
     padding-bottom: 200px;
+    @media screen and (max-width: 1025px){
+        padding-bottom: 100px;
+    }
 }
 .screen-1 {
     background: #f9f8fb;
@@ -384,6 +519,25 @@ section {
             margin-top: 50px;
         }
     }
+    @media screen and (max-width: 1025px) {
+        padding-top: 100px;
+        h1 {
+            font-size: 34px;
+            text-align: center;
+        }
+        h2{
+            text-align: center;
+        }
+        .blocks{
+            .block {
+                .text {
+                    br{
+                        display: none;
+                    }
+                }
+            }
+        }
+    }
 }
 .download-link-wrapper {
     display: flex;
@@ -429,6 +583,9 @@ section {
         color: #f9f8fb;
         background: $main-red;
     }
+    @media screen and (max-width: 1025px){
+        font-size: 18px;
+    }
 }
 .screen-row {
     min-height: initial;
@@ -458,7 +615,8 @@ section {
             flex: 1 1 33.33333%;
             max-width: 33.33333%;
             margin-top: 60px;
-            img, svg {
+            img,
+            svg {
                 width: 65px;
                 margin-bottom: 15px;
                 height: auto;
@@ -530,13 +688,13 @@ footer {
     }
 }
 
-.cancel-svg{
-    svg{
+.cancel-svg {
+    svg {
         transform: scale(0.7);
         margin-left: 2px;
     }
     position: relative;
-    &:before{
+    &:before {
         content: "";
         position: absolute;
         width: 65px;
@@ -544,7 +702,7 @@ footer {
         border-radius: 100%;
         border: 2px solid #40a6ffa8;
     }
-    &:after{
+    &:after {
         content: "";
         position: absolute;
         height: 65px;
